scss/starter.scss
/* ... */
// SECTION BREAK STYLES ------------------------------------------------------------ NEW!!!!

.sectionBreakImg {
    position: relative;
    height: 250px;
    width: 100%;
    margin-left: 0;
    padding: 0;
  }
  .bigPictureImg::before {    
    content: "";
    background-size: cover;
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
    // opacity: 0.95;
    background-position: 50% 70%;
    background-repeat: no-repeat;
    background-image: url("https://earlylearning.ubc.ca//app/uploads/2022/12/bigPicture.jpg");
  }
  .geogVulnImg::before {    
    content: "";
    background-size: cover;
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
    // opacity: 0.75;
    background-position: 50% 65%;
    background-repeat: no-repeat;
    background-image: url("https://earlylearning.ubc.ca//app/uploads/2022/12/geogVulnImg.jpg");
  }
  .exploringDeeperImg::before {    
    content: "";
    background-size: cover;
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
    opacity: 1;
    background-position: 50% 70%;
    background-repeat: no-repeat;
    background-image: url("https://earlylearning.ubc.ca//app/uploads/2022/12/exploringDeeper.jpg");
  }
  .conclusionImg::before {    
    content: "";
    background-size: cover;
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
    background-position: 50% 25%;
    background-repeat: no-repeat;
    background-image: url("https://earlylearning.ubc.ca//app/uploads/2022/12/conclusionImage.jpeg");
  }

.ediSynthSectionTitle {
  position: relative;
  
  font-size: 3rem;
  z-index: 2;
  display: block;
  &::before {
    position: relative;
    content: "";
    width: 65px;
    height: 65px;
    border-radius: 50px;
    background-color: $edi-base;
    display: inline-block;
    top: 15px;
    margin-right: 2rem;
  }
}
@media (min-width: 992px) {
  .sectionBreakImg {
    width: 150%;
    margin: 10rem 0 5rem;
    margin-left: -50% !important;
  }
  .ediSynthSectionTitle {
    width: 100%;
    margin-left: 33%;
    margin-bottom: 0 !important;
  }
}


// ACCORDION CONTAINER STYLES ------------------------------- NEW!!

.accordionContainer {
  border-top: 1px solid $med;
}



// 
// ---------------------------------- INDIVIDUAL SECTION STYLING ---------------------------------------
// 


// KEY FINDINGS
#w8keyFindings {
  .keyFindingImg {
    width: 80%;
    margin: 0 auto;
  }
}

@include media-breakpoint-up(md) { 
  .keyFindingImg {
    width: 100%;
    margin: 0 auto;
  }
}


// PARTICIPATION/DEMOGRAPHICS

#demoNumTable_btn,
#demoPercentTable_btn {
  padding: 0.5rem 1.5rem;
}

#demoNumTable {
  position: absolute;
  top: 0;
  left: 1rem;
  visibility: hidden;
}
#demoPercentTable {
  position: absolute;
  top: 0;
  left: 1rem;
  z-index: 2;
  visibility: visible;
}

.tableContainer {
  position: relative;
  height: 315px;
  margin-bottom: 0rem;
}
.table thead tr th, #demoPercentTable thead tr th {
  text-align: left;
}
.table tbody tr td, #demoPercentTable tbody tr td {
  text-align: right;
}
#nhHighLowTable thead tr th, #demoPercentTable thead tr th {
  text-align: right;
}
.waveTableHeader th {
  text-align: right !important;
}


// MEANINGFUL CHANGE
#meaningfulChangeIconLegend {
  .mcIconImg {
    width: 30px;
  }
  p {
    margin-bottom: 0;
  }
}
.meaningfulChange {
  position: relative;
  top: -190px;
  .mcIconImg {
    width: 25px;
  }
  .mcIconLabel {
    display: inline-block;
    vertical-align: middle;
    margin-bottom: 0;
    margin-left: 1rem;
  }
  > .col-5 > p {
    margin-bottom: 0;
  }
}
#vuln1orMore_meaningfulChange {
  position: relative;
  left: 86%;
  top: -115px;
}
.scales_meaningfulChange {
  width: 150px;
  position: absolute;
  top: 380px;
  right: -15px;
}
.scales_communication_meaningfulChange {
  width: 150px;
  position: absolute;
  top: 320px;
  right: -15px;
}

@media (min-width: 1200px) {
  #vuln1orMore_meaningfulChange {
    // right: -775px;
  }
} 


// OVERALL OUTCOMES DESCRIPTION DIAGRAM STYLES

#outcomesGraphic {
  padding: 1rem;

  #fiveScalesEDIRow {
    padding: 1rem;
    .fiveScalesEDIIcons {
      .scaleIconsOutcomes {
        width: 75px;
        margin: 0 auto;
        display: block;
      }
    }
  }

  .bracketDivider {
    height: 15px;
    border-bottom: 2px solid $med;
    border-right: 2px solid $med;
    border-left: 2px solid $med;
  }
  .bracketDividerConnector {
    height: 32px;
    width: 2px;
    margin: 0 auto;
  }

  #scaleLevelOutcomesRow, #overallOutcomesRow {
    .overallOutcomeBoxes {
      min-height: 250px;
      border: 1px solid $dark;
    }
    .scaleOutcomeBox {
      height: 100%;
      min-height: 255px;
    }
    .overall
    .outcomesBarDiagram {
      height: 15px;
      width: 100%;
      & .vulnOutcomesBarDiagram {
        width: 10%;
      }
      & .inFluxOutcomesBarDiagram {
        width: 25%;
      }
      & .onTrackOutcomesBarDiagram {
        width: 65%;
      }
      & .activeBarDiagram {
        border: 1px solid $dark;
      }
    }
  }

}


// MAPBOX MAP STYLES

#mapVuln1orMore {
  position: relative;
  top: 0;
  bottom: 0;
  width: auto;
  height: 600px;
}
.edi-synth-map-overlay {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  min-height: 75%;
  right: 30px;
  background: #fff;
  overflow: auto;
  border-radius: 3px;
  padding: 1rem;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
}
.legendClasses {
  width: 120px;
  height: auto;
}


// NH DISPARITY SECTION

#vulnDisparity_innerWrap {
  position: relative;
}
#vuln1orMoreTrend_vulndisparity {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 5;
}
#nhOutcomeRanges p {
  margin-bottom: 0;
}


// SCALE SUBSCALE DIAGRAMS

.scaleIcons {
  width: 75px;
}
/* ... */

